objects/disco__Discovery_Rule_Value__c.object
<CustomObject>
    <description>The weighted value of a Question Value for a Discovery Rule</description>
    <fields>
        <fullName>disco__Discovery_Rule__c</fullName>
        <label>Discovery Rule</label>
        <referenceTo>disco__Discovery_Rule__c</referenceTo>
        <relationshipLabel>Discovery Rule Values</relationshipLabel>
        <relationshipName>Discovery_Rule_Values</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>disco__Question_Value__c</fullName>
        <label>Question Value</label>
        <referenceTo>disco__Question_Value__c</referenceTo>
        <relationshipLabel>Discovery Rule Values</relationshipLabel>
        <relationshipName>Discovery_Rule_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>disco__Weighted_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weighted Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discovery Rule Value</label>
    <nameField>
        <displayFormat>DRV-{000000}</displayFormat>
        <label>Discovery Rule Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Rule Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>